--- a/app/src/main/res/drawable/bg_pressed_style.xml
+++ b/app/src/main/res/drawable/bg_pressed_style.xml
@@ -2,11 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true">
         <shape>
-            <solid android:color="@color/colorMainPressed"/>
+            <solid android:color="@color/imageSelectorColorMainPressed"/>
         </shape>
     </item>   <item android:state_pressed="false">
         <shape>
-            <solid android:color="@color/colorMain"/>
+            <solid android:color="@color/imageSelectorColorMain"/>
         </shape>
     </item>
 </selector>
