--- a/app/src/main/res/layout/activity_image_select.xml
+++ b/app/src/main/res/layout/activity_image_select.xml
@@ -10,12 +10,12 @@
     <!--top-->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/action_bar_height"
-        android:background="@color/colorMain">
+        android:layout_height="@dimen/image_selector_action_bar_height"
+        android:background="@color/imageSelectorColorMain">
 
         <ImageView
             android:id="@+id/back"
-            android:layout_width="@dimen/action_bar_height"
+            android:layout_width="@dimen/image_selector_action_bar_height"
             android:layout_height="match_parent"
             android:background="@drawable/bg_pressed_style"
             android:clickable="true"
@@ -36,7 +36,7 @@
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@id/back"
             android:text="图片选择"
-            android:textColor="@color/colorWhite"/>
+            android:textColor="@color/imageSelectorColorWhite"/>
 
         <Button
             android:id="@+id/ensure_button"
@@ -55,13 +55,14 @@
         android:id="@+id/grid_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/action_bar_height"
-        android:layout_marginTop="@dimen/action_bar_height"/>
+        android:layout_marginBottom="@dimen/image_selector_action_bar_height"
+        android:layout_marginTop="@dimen/image_selector_action_bar_height"/>
 
     <LinearLayout
         android:id="@+id/folder_list_lin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="#66000000"
         android:layout_marginBottom="50dp"
         android:layout_marginTop="50dp"
         android:background="#66000000"
@@ -79,15 +80,15 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="4"
-            android:background="@color/colorWhite"
+            android:background="@color/imageSelectorColorWhite"
             android:paddingTop="3dp"/>
     </LinearLayout>
     <!--bottom-->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/action_bar_height"
+        android:layout_height="@dimen/image_selector_action_bar_height"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorMain">
+        android:background="@color/imageSelectorColorMain">
 
         <LinearLayout
             android:id="@+id/folder_select_button_lin"
@@ -105,12 +106,12 @@
                 android:layout_centerVertical="true"
                 android:maxWidth="200dp"
                 android:text="图片"
-                android:textColor="@color/colorWhite"/>
+                android:textColor="@color/imageSelectorColorWhite"/>
 
             <ImageView
                 android:id="@+id/arrow"
-                android:layout_width="@dimen/action_bar_height"
-                android:layout_height="@dimen/action_bar_height"
+                android:layout_width="@dimen/image_selector_action_bar_height"
+                android:layout_height="@dimen/image_selector_action_bar_height"
                 android:padding="17dp"
                 android:src="@mipmap/arrow_down"/>
         </LinearLayout>
