--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,25 +1,25 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="ImageSelectorAppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/imageSelectorColorPrimary</item>
+        <item name="colorPrimaryDark">@color/imageSelectorColorPrimaryDark</item>
+        <item name="colorAccent">@color/imageSelectorColorAccent</item>
     </style>
     <!-- Base application theme. -->
-    <style name="NoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="ImageSelectorNoActionBar" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorMain</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDarkBlack</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/imageSelectorColorMain</item>
+        <item name="colorPrimaryDark">@color/imageSelectorColorPrimaryDarkBlack</item>
+        <item name="colorAccent">@color/imageSelectorColorAccent</item>
     </style>
 
-    <style name="FullScreen" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="ImageSelectorFullScreen" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/imageSelectorColorPrimary</item>
+        <item name="colorPrimaryDark">@color/imageSelectorColorPrimaryDark</item>
+        <item name="colorAccent">@color/imageSelectorColorAccent</item>
         <item name="android:windowFullscreen">true</item>
     </style>
 
