--- a/app/src/main/res/layout/image_selector_activity_image_view_pager_show.xml
+++ b/app/src/main/res/layout/image_selector_activity_image_view_pager_show.xml
@@ -23,9 +23,9 @@
             android:id="@+id/back"
             android:layout_width="@dimen/image_selector_action_bar_height"
             android:layout_height="match_parent"
+            android:onClick="back"
             android:background="@drawable/image_selector_bg_pressed_style"
             android:clickable="true"
-            android:onClick="back"
             android:padding="15dp"
             android:src="@mipmap/image_selector_back"/>
 
@@ -35,6 +35,15 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/back"
             android:background="#22FFFFFF"/>
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/back"
+            android:textColor="@color/imageSelectorColorWhite"/>
 
         <Button
             android:id="@+id/ensure_button"
