优化横竖屏显示

--- a/app/src/main/res/drawable/image_selector_bg_pressed_style.xml
+++ b/app/src/main/res/drawable/image_selector_bg_pressed_style.xml
@@ -4,7 +4,8 @@
         <shape>
             <solid android:color="@color/imageSelectorColorMainPressed"/>
         </shape>
-    </item>   <item android:state_pressed="false">
+    </item>
+    <item android:state_pressed="false">
         <shape>
             <solid android:color="@color/imageSelectorColorMain"/>
         </shape>
