--- a/imageSelectorlibrary/src/main/res/layout/image_selector_item_img_show.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_item_img_show.xml
@@ -12,20 +12,21 @@
         <ImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"/>
 
         <View
             android:layout_width="match_parent"
-            android:background="@drawable/image_selector_fore_show_img"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent"
+            android:background="@drawable/image_selector_fore_show_img"/>
 
         <CheckBox
             android:id="@+id/check_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="5dp"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="5dp"/>
 
     </RelativeLayout>
 
