--- a/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_view_pager_show.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_view_pager_show.xml
@@ -3,8 +3,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/root_view"
     android:layout_height="match_parent"
-    tools:context="com.waterfairy.imageselect.activity.ImageViewPagerShowActivity">
+    tools:context="com.waterfairy.imageselect.activity.ImageViewPagerPreviewActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
@@ -13,18 +14,18 @@
 
     <RelativeLayout
         android:id="@+id/rel_top"
-        android:clickable="true"
         android:layout_width="match_parent"
         android:layout_height="@dimen/image_selector_action_bar_height"
-        android:background="@color/imageSelectorColorMain">
+        android:background="@color/imageSelectorColorMain"
+        android:clickable="true">
 
         <ImageView
             android:id="@+id/back"
             android:layout_width="@dimen/image_selector_action_bar_height"
             android:layout_height="match_parent"
-            android:onClick="back"
             android:background="@drawable/image_selector_bg_pressed_style"
             android:clickable="true"
+            android:onClick="back"
             android:padding="15dp"
             android:src="@mipmap/image_selector_back"/>
 
@@ -44,53 +45,28 @@
             android:layout_toRightOf="@id/back"
             android:textColor="@color/imageSelectorColorWhite"/>
 
-        <Button
-            android:id="@+id/ensure_button"
-            android:layout_width="wrap_content"
-            android:layout_height="35dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:background="@drawable/image_selector_style_ensure_button"
-            android:text="完成"
-            android:textColor="@drawable/image_selector_style_text_ensure_button"/>
     </RelativeLayout>
 
     <RelativeLayout
-
         android:id="@+id/rel_bottom"
-        android:clickable="true"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/image_selector_action_bar_height"
-        android:layout_alignParentBottom="true"
-        android:background="@color/imageSelectorColorMain">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true">
 
-        <LinearLayout
-            android:id="@+id/select_button_lin"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
+        <TextView
+            android:id="@+id/tv_num"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/image_selector_bg_num"
             android:gravity="center"
-            android:paddingRight="10dp">
-
-            <CheckBox
-                android:id="@+id/check_box"
-                android:checked="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:clickable="false"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="选择"
-                android:textColor="@color/imageSelectorColorWhite"/>
-
-
-        </LinearLayout>
-
+            android:text="1/1"
+            android:textColor="@color/imageSelectorColorWhite"
+            android:textSize="14dp"/>
 
     </RelativeLayout>
+
+
 </RelativeLayout>
