--- a/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_view_pager_show.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_view_pager_show.xml
@@ -2,10 +2,11 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     android:id="@+id/root_view"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.waterfairy.imageselect.activity.ImageViewPagerPreviewActivity">
+    android:background="@android:color/black"
+    tools:context="com.waterfairy.imageselect.activity.ImageViewPagerShowActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
@@ -16,14 +17,13 @@
         android:id="@+id/rel_top"
         android:layout_width="match_parent"
         android:layout_height="@dimen/image_selector_action_bar_height"
-        android:background="@color/imageSelectorColorMain"
+        android:background="@color/imageSelector_bg_shadow_deep"
         android:clickable="true">
 
         <ImageView
             android:id="@+id/back"
             android:layout_width="@dimen/image_selector_action_bar_height"
             android:layout_height="match_parent"
-            android:background="@drawable/image_selector_bg_pressed_style"
             android:clickable="true"
             android:onClick="back"
             android:padding="15dp"
@@ -68,5 +68,23 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/rel_save"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/imageSelector_bg_shadow">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerVertical="true"
+            android:background="@color/imageSelectorColorWhite"
+            android:gravity="center_vertical"
+            android:onClick="savePicture"
+            android:paddingLeft="16dp"
+            android:text="保存图片"
+            android:textColor="@color/imageSelectorColorPrimaryDarkBlack"
+            android:textSize="14dp"/>
+    </RelativeLayout>
 </RelativeLayout>
