--- a/imageSelectorlibrary/src/main/res/layout/image_selector_img.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_img.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:id="@+id/img"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true"/>
 
 </RelativeLayout>
