--- a/imageSelectorlibrary/src/main/res/layout/activity_image_select_test.xml
+++ b/imageSelectorlibrary/src/main/res/layout/activity_image_select_test.xml
@@ -10,12 +10,12 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="selectImg"
+        android:id="@+id/select_img"
         android:text="选择图片" />
 
     <GridView
         android:layout_gravity="center_horizontal"
         android:id="@+id/grid_view"
-        android:layout_width="240dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent" />
 </LinearLayout>
