--- a/imageSelectorlibrary/src/main/res/layout/activity_image_select_test.xml
+++ b/imageSelectorlibrary/src/main/res/layout/activity_image_select_test.xml
@@ -12,6 +12,11 @@
         android:layout_height="wrap_content"
         android:id="@+id/select_img"
         android:text="选择图片" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/take_photo"
+        android:text="拍照" />
 
     <GridView
         android:layout_gravity="center_horizontal"
