--- a/imageSelectorlibrary/src/main/res/layout/activity_image_select_test.xml
+++ b/imageSelectorlibrary/src/main/res/layout/activity_image_select_test.xml
@@ -18,6 +18,11 @@
         android:id="@+id/take_photo"
         android:text="拍照" />
 
+    <com.waterfairy.imageselect.ZoomImageView
+        android:id="@+id/zoom_img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <GridView
         android:layout_gravity="center_horizontal"
         android:id="@+id/grid_view"
