--- a/imageSelectorlibrary/src/main/res/layout/activity_img_crop.xml
+++ b/imageSelectorlibrary/src/main/res/layout/activity_img_crop.xml
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/img"
     android:layout_height="match_parent"
-    tools:context=".activity.ImgCropActivity">
-
-</android.support.constraint.ConstraintLayout>
+    android:orientation="vertical"/>
