--- a/imageSelectorlibrary/src/main/res/layout/activity_img_crop.xml
+++ b/imageSelectorlibrary/src/main/res/layout/activity_img_crop.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:id="@+id/img"
-    android:layout_height="match_parent"
-    android:orientation="vertical"/>
+           android:id="@+id/img"
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:background="@color/imageSelectorColorMain"
+           android:orientation="vertical"/>
