保存图片  ,优化显示

--- a/imageSelectorlibrary/src/main/res/layout/activity_img_crop.xml
+++ b/imageSelectorlibrary/src/main/res/layout/activity_img_crop.xml
@@ -1,7 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
-           android:id="@+id/img"
-           android:layout_width="match_parent"
-           android:layout_height="match_parent"
-           android:background="@color/imageSelectorColorMain"
-           android:orientation="vertical"/>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/imageSelector_bg_shadow_deep"
+    android:orientation="vertical">
+    <!--top-->
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/image_selector_action_bar_height"
+        android:background="@color/imageSelectorColorMain">
+
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="@dimen/image_selector_action_bar_height"
+            android:layout_height="match_parent"
+            android:background="@drawable/image_selector_bg_pressed_style"
+            android:clickable="true"
+            android:padding="15dp"
+            android:src="@mipmap/image_selector_back"/>
+
+        <TextView
+            android:layout_width="1dp"
+            android:layout_height="20dp"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/back"
+            android:background="#22FFFFFF"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/back"
+            android:text="图片裁剪"
+            android:textColor="@color/imageSelectorColorWhite"/>
+
+        <Button
+            android:id="@+id/ensure_button"
+            android:layout_width="wrap_content"
+            android:layout_height="35dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:background="@drawable/image_selector_style_ensure_button"
+            android:text="完成"
+            android:textColor="@drawable/image_selector_style_text_ensure_button"/>
+    </RelativeLayout>
+
+    <com.waterfairy.imageselect.widget.ImageCropView
+        android:id="@+id/img"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
