--- a/imageSelectorlibrary/src/main/res/layout/activity_image_select_test.xml
+++ b/imageSelectorlibrary/src/main/res/layout/activity_image_select_test.xml
@@ -7,30 +7,70 @@
               tools:context=".test.TestActivity">
 
     <TextView
-        android:layout_width="match_parent"
         android:id="@+id/text"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="2"/>
 
-    <Button
-        android:id="@+id/select_img"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="选择图片"/>
+        android:orientation="horizontal">
 
-    <Button
-        android:id="@+id/take_photo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="拍照"/>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-    <Button
-        android:id="@+id/crop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="裁剪"/>
+            <Button
+                android:id="@+id/select_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="选择图片"/>
 
-    <com.waterfairy.imageselect.widget.ZoomImageView
+            <Button
+                android:id="@+id/take_photo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="拍照"/>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/crop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="裁剪"/>
+
+            <Button
+                android:id="@+id/crop2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="裁剪2"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/show"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="展示多张"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+
+    <com.waterfairy.imageselect.widget.Zoom2ImageView
         android:id="@+id/zoom_img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
