图片剪切以及放大

--- a/imageSelectorlibrary/src/main/res/layout/image_selector_img.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_img.xml
@@ -4,7 +4,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-    <com.waterfairy.imageselect.widget.Zoom2ImageView
+    <ImageView
         android:id="@+id/img"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
