--- a/imageSelectorlibrary/src/main/res/layout/image_selector_img.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_img.xml
@@ -4,9 +4,10 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-    <ImageView
+    <com.waterfairy.imageselect.widget.Zoom2ImageView
         android:id="@+id/img"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"/>
 
 </RelativeLayout>
