--- a/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_show.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_show.xml
@@ -6,7 +6,7 @@
                 android:background="@android:color/black">
 
 
-    <ImageView
+    <com.waterfairy.imageselect.widget.ZoomImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
