修复  双指缩放时蹦bug

--- a/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_view_pager_show.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_view_pager_show.xml
@@ -8,7 +8,7 @@
     android:background="@android:color/black"
     tools:context="com.waterfairy.imageselect.activity.ImageViewPagerShowActivity">
 
-    <android.support.v4.view.ViewPager
+    <com.waterfairy.imageselect.widget.MyViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
