--- a/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_view_pager_preview.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_view_pager_preview.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/black"
     tools:context="com.waterfairy.imageselect.activity.ImageViewPagerPreviewActivity">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
