--- a/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_select.xml
+++ b/imageSelectorlibrary/src/main/res/layout/image_selector_activity_image_select.xml
@@ -68,7 +68,7 @@
         android:orientation="vertical"
         android:visibility="gone">
 
-        <androidx.legacy.widget.Space
+        <Space
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"/>
